--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 3,
   "name": "Keywords Highlighter",
-  "version": "0.0.3",
+  "version": "0.0.6",
   "description": "a chrome extension that highlights keywords on web pages, making it easy to find or skip information",
   "options_page": "src/pages/options/index.html",
   "background": {
@@ -15,21 +15,14 @@
     "128": "icon-128.png"
   },
   "permissions": [
-    "storage"
+    "storage",
+    "scripting"
   ],
-  "content_scripts": [
-    {
-      "matches": [
-        "https://www.linkedin.com/*"
-      ],
-      "js": [
-        "src/pages/content/index.js"
-      ],
-      "css": [
-        "assets/css/contentStyle16837320447.chunk.css"
-      ]
-    }
+  "host_permissions": [
+    "http://*/*",
+    "https://*/*"
   ],
+  "content_scripts": [],
   "web_accessible_resources": [
     {
       "resources": [
